Fixed overflow error on LedgerAccount selector

--- a/packages/widget/src/components/Modal.css
+++ b/packages/widget/src/components/Modal.css
@@ -18,6 +18,8 @@
 
 .modal {
   position: relative;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   width: 30em;
   max-width: 100vw;
